Encryptor 1 Change To Use String Instead Of Bytes