@@ -1,29 +1,17 @@
 package file;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
 public class FileHandlingEncryptor extends FileHandling
 {
-
-    /**
-     *saves the encrypted data to a new file ("source_file_name"_encrypted) and stores the encryption key
-     * in a separate file (key.txt)
-     * example:
-     * input file -> name.txt
-     * encrypted -> name_encrypted.txt
-     * key file -> key.txt
-     *
-     * @param path path for the source file
-     * @param data data of the encrypted file to save
-     * @param key the integer user in the encryption
-     */
-    public void saveEncryptedData(byte[] data , Path path , int key) throws IOException
+    public void saveEncryptedData(String data , Path path , int key) throws IOException
     {
 
         Path encryptedFilePath = buildEncryptedFilePath(path);
-        Files.write(encryptedFilePath , data);
+        Files.writeString(encryptedFilePath , data);
 
         Path keyFilePath = buildSecretKeyFilePath(path);
         Files.writeString(keyFilePath , Integer.toString(key));
